Current Weather API

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
-.nav-title-margin-c{
+.nav-title-margin-c {
     margin-left: 16%;
     margin-right: 16%;
 }
 
-.card-margin-c{
+.card-margin-c {
     margin-left: 10%;
     margin-right: 10%;
 }
 
-p.temp-display{
+.card-title {
+    font-size: 30px;
+}
+
+p.temp-display {
+    font-size: 70px
+}
+
+p.temp-display span.temp {
     font-size: 70px
 }
 
@@ -16,8 +24,8 @@ p.temp-display sup span {
     font-size: 30px;
 }
 
-p.temp-display span{
-    font-size: 30px; 
+p.temp-display span.c_icon {
+    font-size: 30px;
     margin-left: -20px;
 }
 
@@ -31,14 +39,21 @@ p.temp-display span{
     color: black;
 }
 
-.quick-whether{
+.quick-whether {
     font-size: 50px;
     color: #08ca49;
-    font-family:Georgia, 'Times New Roman', Times, serif
-
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
 
-.earth{
-    width:20px;
+.earth {
+    width: 20px;
 }
 
+#map {
+    height: 400px;
+    margin-left: 10%;
+    margin-right: 10%;
+
+
+
+}
